--- a/css/footer.css
+++ b/css/footer.css
@@ -125,16 +125,17 @@
 	background: #000;
 	color: #fff;
 	border-top: 1px solid #333;
+	display: flex;
+	justify-content: space-between;
+	padding: 17px 25px;
 }
 
 .footer-nav {
 	display: flex;
 	justify-content: center;
 	gap: 20px;
-	font-size: 0.9rem;
+	font-size: 1.2rem;
 	font-weight: 600;
-	margin-bottom: 20px;
-	margin-top: 20px;
 }
 
 .footer-nav a {
@@ -159,14 +160,8 @@
 	width: 100%;
 }
 
-.footer-address {
-	font-size: 0.85rem;
-	color: #ccc;
-}
-
 .footer-bottom {
-	margin-top: 30px;
-	font-size: 0.75rem;
+	font-size: 1rem;
 	color: #999;
 }
 
@@ -191,6 +186,12 @@ button:active {
 
 
 @media (max-width: 1024px) {
+	.footer-bottom-area {
+		flex-direction: column;
+		gap: 7px;
+	}
+
+	
 	.footer-section {
 		padding-top: 0;
 	}
@@ -249,6 +250,5 @@ button:active {
 
 	.footer-bottom {
 		font-size: 0.7rem;
-		margin-top: 20px;
 	}
 }
