--- a/css/service.css
+++ b/css/service.css
@@ -1003,5 +1003,10 @@ body {
 		width: 90%;
 		padding-top: 60px;
 	}
+	/* テキスト設定 */
+	.modal-influencehub-content h2 {
+		font-size: 1.2rem;
+	}
+
 
 }
