モバイル画面の背景動画不備修正修正（2025/06/28）

--- a/css/company.css
+++ b/css/company.css
@@ -60,6 +60,11 @@
 	object-fit: cover;
 }
 
+.video-background video::-webkit-media-controls {
+	display: none !important;
+}
+
+
 .main-content {
 	position: relative;
 	z-index: 1;
