Contactページのリンク修正と採用ページのボタン追加

--- a/css/recruit.css
+++ b/css/recruit.css
@@ -274,4 +274,10 @@ body {
 	.recruit-second-title {
 		margin: 30px 0 10px;
 	}
+
+	.recruit-tab-content {
+		padding: 15px;
+		margin: 10px;
+	}
+
 }
